[package]
name = "spectrex"
version = "0.3.16"
edition = "2021"
authors = ["Spectre developers"]
repository = "https://github.com/spectre-project/rusty-spectrex"
license = "ISC"
description = "SpectreX is the AstroBWTv3 CPU mining algorithm in Rust."
readme = "README.md"
keywords = ["hash", "algorithm", "library", "spectrex", "astrobwt"]
categories = ["algorithms", "cryptography"]
homepage = "https://spectre-network.org"

[dependencies]
fnv = "1.0.7"
psacak = "0.1.0"
rc4 = "0.1.0"
salsa20 = "0.10.2"
sha2 = "0.10.8"
siphasher = "1.0.1"
xxhash-rust = { version = "0.8.10", features = ["xxh64"] }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "astrobwtv3"
harness = false
